--- a/sample.html
+++ b/sample.html
@@ -2276,8 +2276,8 @@
         $("#pxlSizeActive").prop('checked', false);
         $("#pxlSizeGroup").css('display', 'none');
 
-        $("#pxlBoundX").val('');
-        $("#pxlBoundY").val('');
+        $("#pxlBoundX").val(0);
+        $("#pxlBoundY").val(0);
         $("#pxlBoundWidth").val('');
         $("#pxlBoundHeight").val('');
         $("#pxlBoundsActive").prop('checked', false);
