Simplify duplex options after reading class docs..

--- a/sample.html
+++ b/sample.html
@@ -361,7 +361,7 @@
                                                 <label for="pxlDuplex"> Duplex</label>
                                                 <select id="pxlDuplex" class="form-control pull-right">
                                                     <option value="">Single Sided</option>
-                                                    <option value="two-sided">Double Sided</option>
+                                                    <option value="duplex">Double Sided</option>
                                                     <option value="long-edge">Two Sided (Long Edge)</option>
                                                     <option value="short-edge">Two Sided (Short Edge)</option>
                                                     <option value="tumble">Tumble</option>
