--- a/sample.html
+++ b/sample.html
@@ -359,7 +359,13 @@
 
                                             <div class="form-group form-inline">
                                                 <label for="pxlDuplex"> Duplex</label>
-                                                <input type="checkbox" id="pxlDuplex" class="pull-right" />
+                                                <select id="pxlDuplex" class="form-control pull-right">
+                                                    <option value="">Single Sided</option>
+                                                    <option value="duplex">Double Sided</option>
+                                                    <option value="long-edge">Two Sided (Long Edge)</option>
+                                                    <option value="short-edge">Two Sided (Short Edge)</option>
+                                                    <option value="tumble">Tumble</option>
+                                                </select>
                                             </div>
 
                                             <div class="form-group form-inline">
@@ -2266,7 +2272,7 @@
         $("#pxlColorType").val("color");
         $("#pxlCopies").val(1);
         $("#pxlDensity").val('');
-        $("#pxlDuplex").prop('checked', false);
+        $("#pxlDuplex").val("");
         $("#pxlInterpolation").val("");
         $("#pxlJobName").val("");
         $("#pxlLegacy").prop('checked', false);
@@ -2783,7 +2789,7 @@
                             colorType: $("#pxlColorType").val(),
                             copies: copies,
                             density: $("#pxlDensity").val(),
-                            duplex: isChecked($("#pxlDuplex"), cleanConditions['pxlDuplex']),
+                            duplex: $("#pxlDuplex").val(),
                             interpolation: $("#pxlInterpolation").val(),
                             jobName: jobName,
                             margins: pxlMargins,
