Add printer port information

--- a/sample.html
+++ b/sample.html
@@ -1393,6 +1393,7 @@
                 list += "<li>" + (data[i].default ? "* " : "") + data[i].name + "<ul>" +
                         "<li><strong>Driver:</strong> " + data[i].driver + "</li>" +
                         "<li><strong>Density:</strong> " + data[i].density + "dpi</li>" +
+                        "<li><strong>Connection:</strong> " + data[i].connection + "</li>" +
                         (data[i].trays ? "<li><strong>Trays:</strong> " + data[i].trays + "</li>" : "") +
                         "</ul></li>";
             }
