Add support for named density values for #570

--- a/sample.html
+++ b/sample.html
@@ -421,7 +421,7 @@
                                                 <label for="pxlDensityAsymm" class="inline">Asymmetric:</label>
                                                 <input type="checkbox" id="pxlDensityAsymm" onclick="checkGroupActive('pxlDensityAsymm', 'pxlDensityGroup', 'pxlDensity');">
                                                 )
-                                                <input type="number" id="pxlDensity" class="form-control" />
+                                                <input id="pxlDensity" class="form-control" />
                                             </div>
                                             <div class="inline" id="pxlDensityGroup">
                                                 <div class="form-group form-inline">
