--- a/sample.html
+++ b/sample.html
@@ -2538,7 +2538,7 @@
     });
 
     //make dirty when changed
-    $("input[type=checkbox]").on('click', function() {
+    $("input").on('change', function() {
         $(this).addClass("dirty");
     });
 
@@ -2629,14 +2629,26 @@
     }
 
     function isChecked(checkElm, ifClean) {
-        if (ifClean !== undefined && !checkElm.hasClass("dirty")) {
-            var lbl = checkElm.siblings("label").text();
-            displayMessage("Forced " + lbl + " " + ifClean + ".", 'alert-warning');
+        if (!checkElm.hasClass("dirty")) {
+            if (ifClean !== undefined) {
+                var lbl = checkElm.siblings("label").text();
+                displayMessage("Forced " + lbl + " " + ifClean + ".", 'alert-warning');
+            }
 
             return ifClean;
         }
 
         return checkElm.prop("checked");
+    }
+
+    function includedValue(element, value) {
+        if (value != null) {
+            return value;
+        } else if (element.hasClass("dirty")) {
+            return element.val();
+        } else {
+            return undefined;
+        }
     }
 
     function usbButton(ids, data) {
@@ -2741,7 +2753,7 @@
     }
 
     function updateConfig(cleanConditions) {
-        var pxlSize = null;
+        var pxlSize = undefined;
         if (isChecked($("#pxlSizeActive"), cleanConditions['pxlSizeActive'])) {
             pxlSize = {
                 width: $("#pxlSizeWidth").val(),
@@ -2749,7 +2761,7 @@
             };
         }
 
-        var pxlBounds = null;
+        var pxlBounds = undefined;
         if (isChecked($("#pxlBoundsActive"), cleanConditions['pxlBoundsActive'])) {
             pxlBounds = {
                 x: $("#pxlBoundX").val(),
@@ -2759,7 +2771,7 @@
             };
         }
 
-        var pxlMargins = $("#pxlMargins").val();
+        var pxlMargins = includedValue($("#pxlMargins"));
         if (isChecked($("#pxlMarginsActive"), cleanConditions['pxlMarginsActive'])) {
             pxlMargins = {
                 top: $("#pxlMarginsTop").val(),
@@ -2772,35 +2784,35 @@
         var copies = 1;
         var jobName = null;
         if ($("#rawTab").hasClass("active")) {
-            copies = $("#rawCopies").val();
-            jobName = $("#rawJobName").val();
+            copies = includedValue($("#rawCopies"));
+            jobName = includedValue($("#rawJobName"));
         } else {
-            copies = $("#pxlCopies").val();
-            jobName = $("#pxlJobName").val();
+            copies = includedValue($("#pxlCopies"));
+            jobName = includedValue($("#pxlJobName"));
         }
 
         cfg.reconfigure({
-                            altPrinting: isChecked($("#rawAltPrinting"), cleanConditions['rawAltPrinting']),
-                            encoding: $("#rawEncoding").val(),
-                            endOfDoc: $("#rawEndOfDoc").val(),
-                            perSpool: $("#rawPerSpool").val(),
+                            altPrinting: includedValue($("#rawAltPrinting"), isChecked($("#rawAltPrinting"), cleanConditions['rawAltPrinting'])),
+                            encoding: includedValue($("#rawEncoding")),
+                            endOfDoc: includedValue($("#rawEndOfDoc")),
+                            perSpool: includedValue($("#rawPerSpool")),
 
                             bounds: pxlBounds,
-                            colorType: $("#pxlColorType").val(),
+                            colorType: includedValue($("#pxlColorType")),
                             copies: copies,
-                            density: $("#pxlDensity").val(),
-                            duplex: $("#pxlDuplex").val(),
-                            interpolation: $("#pxlInterpolation").val(),
+                            density: includedValue($("#pxlDensity")),
+                            duplex: includedValue($("#pxlDuplex")),
+                            interpolation: includedValue($("#pxlInterpolation")),
                             jobName: jobName,
                             margins: pxlMargins,
-                            orientation: $("#pxlOrientation").val(),
-                            paperThickness: $("#pxlPaperThickness").val(),
-                            printerTray: $("#pxlPrinterTray").val(),
-                            rasterize: isChecked($("#pxlRasterize"), cleanConditions['pxlRasterize']),
-                            rotation: $("#pxlRotation").val(),
-                            scaleContent: isChecked($("#pxlScale"), cleanConditions['pxlScale']),
+                            orientation: includedValue($("#pxlOrientation")),
+                            paperThickness: includedValue($("#pxlPaperThickness")),
+                            printerTray: includedValue($("#pxlPrinterTray")),
+                            rasterize: includedValue($("#pxlRasterize"), isChecked($("#pxlRasterize"), cleanConditions['pxlRasterize'])),
+                            rotation: includedValue($("#pxlRotation")),
+                            scaleContent: includedValue($("#pxlScale"), isChecked($("#pxlScale"), cleanConditions['pxlScale'])),
                             size: pxlSize,
-                            units: $("input[name='pxlUnits']:checked").val()
+                            units: includedValue($("input[name='pxlUnits']:checked"))
                         });
     }
 
