Bring forward 2.0 html raster refactoring + fix existing zoom/scaling issues

--- a/sample.html
+++ b/sample.html
@@ -1793,7 +1793,7 @@
 
     /// Pixel Printers ///
     function printHTML() {
-        var config = getUpdatedConfig({ 'pxlScale': false });
+        var config = getUpdatedConfig();
         var opts = getUpdatedOptions(true);
 
         var printData = [
