--- a/sample.html
+++ b/sample.html
@@ -10,7 +10,8 @@
 <script type="text/javascript" src="js/qz-tray.js"></script>
 
 <!-- Pollyfills -->
-<script type="text/javascript" src="js/sample/fetch-3.0.0.min.js"></script>
+<script type="text/javascript" src="js/sample/promise-polyfill-8.1.3.min.js"></script>
+<script type="text/javascript" src="js/sample/whatwg-fetch-3.0.0.min.js"></script>
 
 <!-- Page styling -->
 <script type="text/javascript" src="js/sample/jquery-1.11.3.min.js"></script>
