Do not apply auto landscape if wide bounds and rotation are both set + fix sample select box settings

--- a/sample.html
+++ b/sample.html
@@ -2539,7 +2539,7 @@
     });
 
     //make dirty when changed
-    $("input").on('change', function() {
+    $("input").add("select").on('change', function() {
         $(this).addClass("dirty");
     });
 
