Don't force orientation flag flag when rotate flag is set (#618)
Don't force orientation flag flag when rotate flag is set
Closes #617

--- a/sample.html
+++ b/sample.html
@@ -2557,7 +2557,7 @@
     });
 
     //make dirty when changed
-    $("input").on('change', function() {
+    $("input").add("select").on('change', function() {
         $(this).addClass("dirty");
     });
 
