sample escape fix

--- a/sample.html
+++ b/sample.html
@@ -1004,7 +1004,7 @@
                             <div class="btn-toolbar">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-info" onclick="startPrintersListen()">All Printers</button>
-                                    <button type="button" class="btn btn-success" onclick="startPrintersListen($('#configPrinter').html())">
+                                    <button type="button" class="btn btn-success" onclick="startPrintersListen($('#configPrinter').text())">
                                         Current Printer
                                     </button>
                                     <button type="button" class="btn btn-default" onclick="getPrintersStatus()">Request current status</button>
