--- a/sample.html
+++ b/sample.html
@@ -219,8 +219,8 @@
                                             </div>
 
                                             <div class="form-group form-inline">
-                                                <label for="rawEndOfDoc">End Of Doc</label>
-                                                <input type="text" id="rawEndOfDoc" class="form-control pull-right" />
+                                                <label for="rawSpoolEnd">End Of Doc</label>
+                                                <input type="text" id="rawSpoolEnd" class="form-control pull-right" />
                                             </div>
 
                                             <div class="form-group form-inline">
@@ -416,8 +416,8 @@
                                             </div>
 
                                             <div class="form-group form-inline">
-                                                <label for="pxlSpool">Per Spool</label>
-                                                <input type="number" id="pxlSpool" class="form-control pull-right" />
+                                                <label for="pxlSpoolSize">Per Spool</label>
+                                                <input type="number" id="pxlSpoolSize" class="form-control pull-right" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -2278,9 +2278,9 @@
     /// Resets ///
     function resetRawOptions() {
         //config
-        $("#rawPerSpool").val(1);
+        $("#rawSpoolSize").val(1);
         $("#rawEncoding").val(null);
-        $("#rawEndOfDoc").val(null);
+        $("#rawSpoolEnd").val(null);
         $("#rawAltPrinting").prop('checked', false);
         $("#rawCopies").val(1);
 
@@ -2307,7 +2307,7 @@
         $("#pxlPrinterTray").val(null);
         $("#pxlRasterize").prop('checked', false);
         $("#pxlRotation").val(0);
-        $("#pxlSpool").val("");
+        $("#pxlSpoolSize").val("");
         $("#pxlScale").prop('checked', true);
         $("#pxlUnitsIN").prop('checked', true);
 
@@ -2831,23 +2831,22 @@
         }
 
         var copies = 1;
-        var perSpool = null;
+        var spoolSize = null;
         var jobName = null;
         if ($("#rawTab").hasClass("active")) {
             copies = includedValue($("#rawCopies"));
-            perSpool = includedValue($("#rawPerSpool"));
+            spoolSize = includedValue($("#rawSpoolSize"));
             jobName = includedValue($("#rawJobName"));
         } else {
             copies = includedValue($("#pxlCopies"));
-            perSpool = includedValue($("#pxlSpool"));
+            spoolSize = includedValue($("#pxlSpoolSize"));
             jobName = includedValue($("#pxlJobName"));
         }
 
         cfg.reconfigure({
                             altPrinting: includedValue($("#rawAltPrinting"), isChecked($("#rawAltPrinting"), cleanConditions['rawAltPrinting'])),
                             encoding: includedValue($("#rawEncoding")),
-                            endOfDoc: includedValue($("#rawEndOfDoc")),
-                            perSpool: perSpool,
+                            spool: { size: spoolSize, end: includedValue($("#rawSpoolEnd")) },
 
                             bounds: pxlBounds,
                             colorType: includedValue($("#pxlColorType")),
