Deprecate printToFile in favor of File IO.  Per #730

--- a/sample.html
+++ b/sample.html
@@ -1193,6 +1193,9 @@
                     <div class="form-group">
                         <label for="askFile">File:</label>
                         <input type="text" id="askFile" class="form-control" value="C:\tmp\example-file.txt" />
+                        <hr />
+                        <p><span class="text-danger" style="font-weight:bold;"><span class="fa fa-warning"></span> WARNING:</span> This feature has been deprecated.  Please configure a local raw <code>FILE:</code> printer, or use <code>File IO</code></a> instead.  For more
+                            information please see <a href="https://github.com/qzind/tray/issues/730">issue&nbsp;<code>#730</code>.</a></p>
                     </div>
                 </div>
                 <div class="modal-footer">
