--- a/sample.html
+++ b/sample.html
@@ -238,10 +238,10 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group form-inline">
-                                                <label class="tip" for="rawAltPrinting" data-toggle="tooltip" title="Bypass driver when using CUPS">
-                                                    Alternate Printing
+                                                <label class="tip" for="rawForceRaw" data-toggle="tooltip" title="Bypass printer driver (CUPS only)">
+                                                    Force Raw
                                                 </label>
-                                                <input type="checkbox" id="rawAltPrinting" class="pull-right" />
+                                                <input type="checkbox" id="rawForceRaw" class="pull-right" />
                                             </div>
 
                                             <div class="form-group form-inline">
@@ -2301,7 +2301,7 @@
         $("#rawSpoolSize").val(1);
         $("#rawEncoding").val(null);
         $("#rawSpoolEnd").val(null);
-        $("#rawAltPrinting").prop('checked', false);
+        $("#rawForceRaw").prop('checked', false);
         $("#rawCopies").val(1);
 
         //printer
@@ -2880,7 +2880,7 @@
         }
 
         cfg.reconfigure({
-                            altPrinting: includedValue($("#rawAltPrinting"), isChecked($("#rawAltPrinting"), cleanConditions['rawAltPrinting'])),
+                            forceRaw: includedValue($("#rawForceRaw"), isChecked($("#rawForceRaw"), cleanConditions['rawForceRaw'])),
                             encoding: includedValue($("#rawEncoding")),
                             spool: { size: spoolSize, end: includedValue($("#rawSpoolEnd")) },
 
