Add disclaimer about Socket API usage.

--- a/sample.html
+++ b/sample.html
@@ -777,6 +777,7 @@
 
             <div id="socketContent" class="tab-pane col-md-8">
                 <h3>Socket</h3>
+                <p>Socket API is experimental; API subject to change.</p>
                 <hr />
 
                 <div class="row">
